[server] expense participants server adjustments #11
